--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -14,10 +14,10 @@
                 Resources
             </div>
             <div class="nav-login">
-                Resources
+                Login
             </div>
             <div class="nav-signup">
-                Resources
+                Sign Up
             </div>
         </div>
 
