Nav bar for desktop done

--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -1,23 +1,33 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./index.css">
+    </head>
+
     <body>
         <div class="nav-bar">
-            <div class="nav-logo">
-                Sorty
+            <div class="nav-bar-header">
+                <div class="nav-bar-header-logo heading-brandname-fontcolor">
+                    Sorty
+                </div>
+                <div class="nav-bar-header-features">
+                    Features
+                </div>
+                <div class="nav-bar-header-pricing">
+                    Pricing
+                </div>
+                <div class="nav-bar-header-resources">
+                    Resources
+                </div>
             </div>
-            <div class="nav-features">
-                Features
-            </div>
-            <div class="nav-features">
-                Pricing
-            </div>
-            <div class="nav-features">
-                Resources
-            </div>
-            <div class="nav-login">
-                Login
-            </div>
-            <div class="nav-signup">
-                Sign Up
+
+            <div class="nav-bar-login">
+                <div class="nav-bar-login-login">
+                    Login
+                </div>
+                <div class="nav-bar-login-signup green-background">
+                    Sign Up
+                </div>
+
             </div>
         </div>
 
@@ -31,7 +41,7 @@
                 </div>
     
                 <div class="feature-button">
-                    <button type="button">Get Started</button>
+                    <button type="button" class="green-background">Get Started</button>
                 </div>
             </div>
 
@@ -45,7 +55,7 @@
         <div class="email-booking">
             <form action="/action_page.php">
                 <input type="text" placeholder="Email Address" name="fname">
-                <input type="submit" value="Book a Demo">
+                <input type="submit" value="Book a Demo" class="green-background">
             </form>
         </div>
 
@@ -57,7 +67,7 @@
 
             <div class="usp-reasons">
                 <div class="usp-reason">
-                    <div class="usp-reason-num">1</div>
+                    <div class="usp-reason-num green-text">1</div>
                     <div class="usp-reason-heading">Handle more projects</div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
@@ -65,7 +75,7 @@
 
             <div class="usp-reasons">
                 <div class="usp-reason">
-                    <div class="usp-reason-num">2</div>
+                    <div class="usp-reason-num green-text">2</div>
                     <div class="usp-reason-heading"> Save lot of time </div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
@@ -73,7 +83,7 @@
 
             <div class="usp-reasons">
                 <div class="usp-reason">
-                    <div class="usp-reason-num">3</div>
+                    <div class="usp-reason-num green-text">3</div>
                     <div class="usp-reason-heading">Improve process</div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
