Main content kinda done

--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -33,15 +33,15 @@
 
         <div class="feature-content">
             <div class="feature-content-text">
-                <div class="feature-heading">
+                <div class="feature-heading heading-brandname-fontcolor">
                     The best way to manage projects and tasks
                 </div>
                 <div class="feature-subheading">
                     Focus on what is important to you and rely on us for organizing your tasks
                 </div>
     
-                <div class="feature-button">
-                    <button type="button" class="green-background">Get Started</button>
+                <div class="feature-button green-background">
+                    Get Started
                 </div>
             </div>
 
