email input done

--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -52,11 +52,12 @@
 
 
 
-        <div class="email-booking">
-            <form action="/action_page.php">
+        <div class="email-booking light-blue-background">
+            <!-- <form action="/action_page.php"> -->
                 <input type="text" placeholder="Email Address" name="fname">
-                <input type="submit" value="Book a Demo" class="green-background">
-            </form>
+                <div class="email-booking-button green-background">Book a Demo</div>
+                <!-- <input type="submit" value="Book a Demo" class="green-background"> -->
+            <!-- </form> -->
         </div>
 
 
