Main content set

--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -67,31 +67,28 @@
             <div class="usp-subheading">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</div>
 
             <div class="usp-reasons">
-                <div class="usp-reason">
+                <div class="usp-reason light-blue-background">
                     <div class="usp-reason-num green-text">1</div>
-                    <div class="usp-reason-heading">Handle more projects</div>
+                    <div class="usp-reason-heading heading-brandname-fontcolor">Handle more projects</div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
-            </div>
 
-            <div class="usp-reasons">
-                <div class="usp-reason">
+                <div class="usp-reason light-blue-background">
                     <div class="usp-reason-num green-text">2</div>
-                    <div class="usp-reason-heading"> Save lot of time </div>
+                    <div class="usp-reason-heading heading-brandname-fontcolor"> Save lot of time </div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
-            </div>
 
-            <div class="usp-reasons">
-                <div class="usp-reason">
+
+                <div class="usp-reason light-blue-background">
                     <div class="usp-reason-num green-text">3</div>
-                    <div class="usp-reason-heading">Improve process</div>
+                    <div class="usp-reason-heading heading-brandname-fontcolor">Improve process</div>
                     <div class="usp-reason-subheading">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.</div>
                 </div>
             </div>
         </div>
 
-        <footer>
+        <footer class="light-blue-background">
             <div class="about-us">
                 <div class="about-us-heading">About Sorty</div>
                 <div class="about-us-content">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</div>
