footer intital work done

--- a/css-assessment/index.html
+++ b/css-assessment/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <footer class="light-blue-background">
+        <div class="footer light-blue-background">
             <div class="about-us">
                 <div class="about-us-heading">About Sorty</div>
                 <div class="about-us-content">Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</div>
